--- a/Taller/TinyML Taller.ipynb
+++ b/Taller/TinyML Taller.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "En el caso del Tiny Machine Learning, el programa que consideramos como el introductorio, ya que se utilizan herramientas muy básicas como una red neuronal por capas sencilla, es la creación, implementación y prueba de un modelo que prediga una función seno.\n",
     "\n",
-    "![Prediccion_Funcion_Seno](/Función%20seno.png)\n",
+    "![Prediccion_Funcion_Seno](Función seno.png)\n",
     "\n",
     "Y a continuación se redacta paso a paso como se crea un conjunto de datos que siguen una función seno, su división en conjuntos de entrenamiento, prueba y validación, la creación y entrenamiento de la red neuronal y la compresión a un modelo de TensorFlowLite para implementarlo en un microcontrolador Arduino Nano Ble 33."
    ]
